--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
 </head>
 <body>
      <div class='main-content'>
+         <p>This site was created by Tom Hanson. It uses weatherstatus and mapbox data</p>
         {{>header}}
         <img class='portrait' src='/img/pic1.jpg' />    
     </div>
