Added an icon of the weather

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,8 +14,10 @@
             <input placeholder='Location'>
             <button>Search</button>
         </form>
+        
         <p id='messageOne'></p>
         <p id='messageTwo'></p>
+        <img src='' id='weatherIcon'/>
     </div>
     {{>footer}}
 
